# portopt-diplomovka

./: .gitignore  README.md  SPUSTIT_REPRODUKCIU.bat  SPUSTIT_WEB.bat  app.py  pyproject.toml
configs/: data.yaml
data/processed/: coverage.csv  log_returns.parquet  prices.parquet
data/raw/: prices_raw.parquet
portfolios/: aggressive.yaml  all_weather.yaml  balanced.yaml  conservative.yaml
portfolios/aggressive/: control.json
portfolios/all_weather/: control.json
portfolios/balanced/: control.json
portfolios/conservative/: control.json
portfolios/tech/: control.json
reports/dm_results/: dm_pvalues.csv  dm_pvalues.json
reports/dsr_results/: dsr_stepwise.csv  dsr_stepwise.json  dsr_summary.csv  dsr_summary.json
reports/pbo_results/: aggressive_logits.csv  all_weather_logits.csv  balanced_logits.csv  conservative_logits.csv  pbo_summary.csv  pbo_summary.json
reports/vix_results/: aggressive_vix_off_trials.csv  aggressive_vix_on_trials.csv  aggressive_vix_report.md  (+2 more)
results_export/: 01_AI_winner_summary.csv  02_holdout_AI_vs_baselines.csv  03_winning_hyperparameters.csv  04_PBO_summary.csv  all_trials_aggressive.csv  all_trials_all_weather.csv  all_trials_balanced.csv  all_trials_conservative.csv
screenshots/: README.md
scripts/: 01_download_data.py  02_preprocess.py  03_compute_pbo.py  04_compute_dsr.py  05_compute_dm.py  06_generate_thesis_outputs.py  06_print_word_results.py  auto_search_v2.py  export_vix_results.py
tests/: test_backtest_costs.py  test_data_alignment.py  test_metrics.py  test_no_lookahead.py  test_smoke.py  test_statistics.py
(+4946 files in other folders)
