[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portopt"
version = "0.0.1"
description = "AI-driven portfolio optimization (diploma thesis)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "yfinance>=0.2.40",
    "PyPortfolioOpt>=1.5.5",
    "torch>=2.2",
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
    "quantstats>=0.0.62",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "omegaconf>=2.3",
    "loguru>=0.7",
    "streamlit>=1.30",
    "optuna>=3.5",
    "altair>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "ipykernel>=6",
    "jupyter>=1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portopt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
